run_728/V_code/no_ambiguity/slurm-66422179.out
****************************************************************
*                      SLURM Batch System                      *
*           IN2P3 Computing Centre, Villeurbanne FR            *
****************************************************************
* Date:                 Tue Feb 20 08:42:28 CET 2024
* Job name:             sending_to_cluster.sh
* Job id:               66422179
* User:                 ikovalen
* Account:              nemo
* Submit host:          cca017
* Partition:            htc
* Quality of service:   normal
* Nodelist:             ccwslurm0190
****************************************************************

Processing /sps/nemo/scratch/ikovalen/run_728/V_code/no_ambiguity/FoilPlane_TracksSaving.cpp...
In file included from input_line_10:1:
/sps/nemo/scratch/ikovalen/run_728/V_code/no_ambiguity/FoilPlane_TracksSaving.cpp:86:27: error: use of undeclared identifier 'j'
                                        if(Eve->get_tracks()[j]->get_side()==0)
                                                             ^

Processing /sps/nemo/scratch/ikovalen/run_728/V_code/no_ambiguity/FoilPlane_Analysis.cpp...
Error in <TFile::TFile>: file FoilPlane_Tracks.root does not exist
Error in <HandleInterpreterException>: Trying to dereference null pointer or trying to call routine taking non-null arguments.
Execution of your code was aborted.
In file included from input_line_10:1:
/sps/nemo/scratch/ikovalen/run_728/V_code/no_ambiguity/FoilPlane_Analysis.cpp:406:2: warning: null passed to a callee that requires a non-null argument [-Wnonnull]
        _t->Print();
        ^~

Processing /sps/nemo/scratch/ikovalen/run_728/V_code/no_ambiguity/FoilPlane_Visualization.cpp...
Error in <HandleInterpreterException>: Trying to dereference null pointer or trying to call routine taking non-null arguments.
Execution of your code was aborted.
In file included from input_line_10:1:
/sps/nemo/scratch/ikovalen/run_728/V_code/no_ambiguity/FoilPlane_Visualization.cpp:38:3: warning: null passed to a callee that requires a non-null argument [-Wnonnull]
                tr->SetBranchAddress("A", &parA);
                ^~
****************************************************************
*                      SLURM Batch System                      *
*           IN2P3 Computing Centre, Villeurbanne FR            *
****************************************************************
Date: Tue Feb 20 08:42:38 CET 2024
Job informations can be found using these commands:
Accounting:
sacct -j 66422179
Efficiency:
seff 66422179
****************************************************************
